fix(front): bug: scrollbar overlaps with element content in codeblock note element;

--- a/dataans/public/css/layout.css
+++ b/dataans/public/css/layout.css
@@ -72,7 +72,8 @@ h4 {
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 0.6em;
+    height: 0.6em;
     border-radius: 3px;
 }
 
